--- a/style.css
+++ b/style.css
@@ -1,139 +1,151 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.container{
-    max-width: 80vw;
-    font-family: 'Ubuntu', sans-serif;
+
+.container {
+    width: 40%;
+    min-height: 100vh;
+    /* background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
+    padding: 10px;
+    
 }
 
-.navbar{
+
+.todo-app{
+    width: 50%;
+    max-width: 540px;
+    background: #914949;
+    margin:50px auto 20px;
+    padding: 20px 30px 70px;
+    border-radius: 50px;
+    /* box-shadow: 0px 0px 50px #afafaf; */
+    box-shadow: 0px 0px 30px #afafaf;
+
+    /* box-shadow: 0 0 5px 30px #d6d6d6; */
+}
+
+h2{
+    color:#002765;
     display: flex;
-    height: 67px;
+    align-items: center;
+    margin-bottom: 50px;
+    font-size: 30px;
+    position: relative;
 }
-.navbar li{
+
+.todo-app h2 img{
+    position: absolute;
+    right: 10;
+    width: 20px;
+    margin-left: 40px;
+}
+
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* background: #edeef0; */
+    background: #fff;
+    border: none;
+    outline: 3px groove #000;
+    outline-offset: 5px;
+    border-radius: 30px;
+    padding-left: 20px;
+    margin-bottom: 25px;
+    box-shadow: 0px 0px 10px #5d5d5d;
+}
+
+.row input{
+    flex: 1; /*text full availabe width*/
+    border:none ;
+    outline: none;
+    padding: 10px;
+    background: transparent;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.row input::placeholder{
+    color: #1e008d;
+}
+
+.row button{
+    border: none;
+    outline: none;
+    padding: 16px 30px;
+    /* background:linear-gradient(45deg,#161823,#16386a) ; */
+    background: #26068f;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 30px;
+    margin: 1px;
+}
+
+ul li{
     list-style: none;
-    margin: 0 12px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    padding: 12px 8px 12px 50px;
+    user-select: none;
+    cursor: pointer;
+    position: relative;
+    margin-block: 10px;
 }
 
-.topleft{
-    width: 50%;
+ul li::before{
+    content: '';
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background: url(unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top:12px;
+    left: 8px;
 }
 
-.topright{ 
-    width: 50%;
+ul li.checked{
+    background:lightskyblue;
+    color:black;
+    border-radius: 50px;
 }
 
-.section1{
-   max-height: 100vh; 
-   color: #711e15;
+ul li.checked::before{
+    background: url(complete.png);
+    background-size: cover;
 }
 
-.section1 h1{
-    color: #37110d;
-    font-size: 2rem;
-}
-
-.logo{
-    font-size: 1.3rem;
-}
-
-.dumbellimg{
-    width: 289px;
-}
-
-.topright .gymimg{
-    width: 466px;
-}
-
-.section2{
-    padding: 73px;
-}
-
-.section2 h1{
-    font-size: 2.3rem;
-}
-
-.section2 p{
-    padding: 0 8vw;
+ul li span{
+    position: absolute;
+    top: 10px;
+    margin-right: 5px;
+    width: 30px;
+    height: 30px;
+    font-size: 22px;
+    color: #000;
+    line-height: 30px;
     text-align: center;
+    border-radius: 50%;
 }
 
-.box{
-    padding: 8px 0;
-    margin: 12px 22px;
-    min-width: 20vw;
-    border: 2px solid rgb(120, 54, 16);
-    border-radius: 8px;
-    text-align: center;
+ul li.checked span{
+    color: #ffffff;
 }
 
-.box h2{
-    font-size: 2rem;
-    padding: 15px 0;
+ul li.checked span:hover{
+    background: #fff;
+    color: #000;
 }
 
-.highlighted{
-    font-size: 1.2rem;
-    font-weight: bolder;
-}
-
-.box ul{
-    list-style-type: none;
-}
-
-.box ul li{
-   margin: 12px 2px;
-}
-
-.plantable{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.section3 table{
-    width: 100%;
-    margin-bottom: 140px;
-    margin-top: 20px;
-    border-collapse: collapse;
-}
-
-.section3 table th{ 
-    width: 23vw; 
-    border-bottom: 2px solid black;
-    padding: 15px 0;
-} 
-
-.section3 table td{   
-    border-bottom: 2px solid black; 
-} 
- 
-
-.section3 h1{
-    font-size: 2.3rem;
-}
-
-.section3{
-    padding: 73px;
-}
-
-footer{
-    padding: 23px;
-    text-align: center;
-}
-.buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 12px;
-}
-
-.deal{
-    font-size: 1.2rem;
-    font-weight: bolder;
-    margin: 12px 0;
+ul li span:hover{
+    background: #000;
+    color: #fff;
 }
